// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Primitives Container limits width and centers 1`] = `
<View
  style={
    {
      "marginLeft": "auto",
      "marginRight": "auto",
      "maxWidth": 600,
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#271F15",
      }
    }
    suppressHighlighting={true}
  >
    Content
  </Text>
</View>
`;

exports[`Layout Primitives Inline renders correctly with gap token 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#271F15",
      }
    }
    suppressHighlighting={true}
  >
    1
  </Text>
  <Text
    style={
      {
        "color": "#271F15",
      }
    }
    suppressHighlighting={true}
  >
    2
  </Text>
</View>
`;

exports[`Layout Primitives Section renders title and subtitle 1`] = `
<View
  style={
    {
      "borderBottomColor": "#EBE4D5",
      "borderBottomWidth": 0,
      "borderStyle": "solid",
      "flexDirection": "column",
      "gap": 16,
      "paddingBottom": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "column",
          "gap": 4,
        }
      }
    >
      <Text
        accessibilityRole="header"
        allowFontScaling={true}
        maxFontSizeMultiplier={1.5}
        style={
          {
            "color": "#271F15",
            "fontFamily": "Inter_600SemiBold",
            "fontSize": 17,
            "letterSpacing": -0.2,
            "lineHeight": 22,
          }
        }
        suppressHighlighting={true}
      >
        [TR] test.title
      </Text>
      <Text
        allowFontScaling={true}
        maxFontSizeMultiplier={1.5}
        style={
          {
            "color": "#786E5D",
            "fontFamily": "Inter_400Regular",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
          }
        }
        suppressHighlighting={true}
      >
        [TR] test.subtitle
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    />
  </View>
  <View>
    <Text
      style={
        {
          "color": "#271F15",
        }
      }
      suppressHighlighting={true}
    >
      Content
    </Text>
  </View>
</View>
`;

exports[`Layout Primitives Stack renders correctly with gap token 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 16,
    }
  }
>
  <Text
    style={
      {
        "color": "#271F15",
      }
    }
    suppressHighlighting={true}
  >
    1
  </Text>
  <Text
    style={
      {
        "color": "#271F15",
      }
    }
    suppressHighlighting={true}
  >
    2
  </Text>
</View>
`;

exports[`Layout Primitives Surface renders danger variant 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(255, 107, 94, 1)",
      "borderBottomColor": "rgba(255, 107, 94, 1)",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 1,
      "borderLeftColor": "rgba(255, 107, 94, 1)",
      "borderLeftWidth": 1,
      "borderRightColor": "rgba(255, 107, 94, 1)",
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopColor": "rgba(255, 107, 94, 1)",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 1,
      "cursor": "default",
      "opacity": 1,
      "shadowColor": "rgb(39,31,21)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    style={
      {
        "color": "#271F15",
      }
    }
    suppressHighlighting={true}
  >
    Content
  </Text>
</View>
`;

exports[`Layout Primitives Surface renders elevated variant 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "borderBottomColor": "rgba(0, 0, 0, 0)",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 0,
      "borderLeftColor": "rgba(0, 0, 0, 0)",
      "borderLeftWidth": 0,
      "borderRightColor": "rgba(0, 0, 0, 0)",
      "borderRightWidth": 0,
      "borderStyle": "solid",
      "borderTopColor": "rgba(0, 0, 0, 0)",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 0,
      "cursor": "default",
      "opacity": 1,
      "shadowColor": "rgb(39,31,21)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    style={
      {
        "color": "#271F15",
      }
    }
    suppressHighlighting={true}
  >
    Content
  </Text>
</View>
`;

exports[`Layout Primitives Surface renders flat by default 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "borderBottomColor": "rgba(0, 0, 0, 0)",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 0,
      "borderLeftColor": "rgba(0, 0, 0, 0)",
      "borderLeftWidth": 0,
      "borderRightColor": "rgba(0, 0, 0, 0)",
      "borderRightWidth": 0,
      "borderStyle": "solid",
      "borderTopColor": "rgba(0, 0, 0, 0)",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 0,
      "cursor": "default",
      "opacity": 1,
      "shadowColor": "rgb(39,31,21)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    style={
      {
        "color": "#271F15",
      }
    }
    suppressHighlighting={true}
  >
    Content
  </Text>
</View>
`;
